test/sema/error_message_stacking.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

struct S<T> { x: invalid, y: T }

struct S { x: T, y: S }
// CHECK: [[# @LINE - 1 ]]:1: error: redeclaration of 'S'
// CHECK: [[# @LINE - 2 ]]:15: error: failed to resolve type 'T'
// CHECK: [[# @LINE - 3 ]]:21: error: expected '1' type argument but received '0'

fn foo(x: S, x: S): unit {}
// CHECK: [[# @LINE - 1 ]]:11: error: expected '1' type argument but received '0'
// CHECK: [[# @LINE - 2 ]]:17: error: expected '1' type argument but received '0'
// CHECK: [[# @LINE - 3 ]]:14: error: redeclaration of 'x'

fn main(): invalid {}
// CHECK: [[# @LINE - 1 ]]:12: error: failed to resolve type 'invalid'
// CHECK: [[# @LINE - 2 ]]:1: error: 'main' function is expected to return 'unit'
